--- a/App02.TTS/Views/MainWindow.xaml
+++ b/App02.TTS/Views/MainWindow.xaml
@@ -44,6 +44,7 @@
                              Style="{StaticResource MaterialDesignChoiceChipPrimaryOutlineListBox}"
                              DisplayMemberPath="Name" SelectedValuePath="VoiceKey"
                              SelectedValue="{Binding SelectedVoice, Mode=TwoWay}"
+                             SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                              HorizontalAlignment="Left"
                              Grid.Column="1" />
                 </Grid>
@@ -64,7 +65,7 @@
                 
                 <!-- Buttons -->
                 <WrapPanel Margin="0,10,0,10" Grid.Row="3">
-                    <Button Command="{Binding CommandSpeak}">Echo Textbox</Button>
+                    <Button Command="{Binding CommandSpeak}">Echo</Button>
                 </WrapPanel>
 
                 <WrapPanel Grid.Row="4">
