--- a/App16.Python/Control/FloatButton.xaml
+++ b/App16.Python/Control/FloatButton.xaml
@@ -1,5 +1,4 @@
 ﻿<UserControl x:Class="App16.Python.Control.FloatButton"
-             x:Name="Root"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -45,8 +44,8 @@
         </Border.Effect>
         <Grid>
             <Ellipse Width="60" Height="60" Fill="Gold" />
-            <TextBlock Text="{Binding ElementName=Root, Path=Kiwi}" HorizontalAlignment="Center"
-                       VerticalAlignment="Center">
+            <TextBlock Text="{Binding Kiwi, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                       HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock.Style>
                     <Style TargetType="TextBlock">
                         <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundAltHighBrush}" />
